--- a/main.scss
+++ b/main.scss
@@ -32,6 +32,11 @@ html {
 body {
   background: var(--color-bg);
   overflow: hidden;
+
+  &.lightmode {
+    --color-bg: #fff;
+    --color-inverted: #000;
+  }
 }
 
 a {
@@ -66,8 +71,6 @@ button {
   /* Corrects inability to style clickable `input` types in iOS */
   -webkit-appearance: none;
 }
-
-
 
 .wrap__hasGradients {
   .color {
@@ -125,7 +128,7 @@ button {
 
 .wrap__hasOutlines {
   .pannel {
-    border: 2px solid var(--color-inverted);
+    border: 2px solid var(--color-bg);
 
     @media (max-width: 850px) {
       z-index: 11;
@@ -135,7 +138,7 @@ button {
   .refresh,
   .settings,
   .copy {
-    box-shadow: 0 0 0 2px var(--color-inverted);
+    box-shadow: 0 0 0 4px var(--color-gb);
   }
   .colors {
     .color {
@@ -147,7 +150,7 @@ button {
         left: 0;
         bottom: -2px;
         right: 0;
-        border: 4px solid var(--color-inverted);
+        border: 4px solid var(--color-bg);
       }
     }
   }
@@ -627,10 +630,17 @@ button {
     padding: var(--size-gutter);
     background: rgba(#212121, 0.8);
 
+    .lightmode & {
+      background: rgba(#fff, 0.8);
+    }
+
     @supports ((-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px))) {
       backdrop-filter: blur(10px);
       -webkit-backdrop-filter: blur(10px);
       background: rgba(#212121, .1);
+      .lightmode & {
+        background: rgba(#fff, 0.8);
+      }
     }
   }
 
@@ -966,10 +976,15 @@ button {
   box-shadow: inset 0 0 0 1px var(--color-inverted);
   overflow: auto;
 
+  margin-top: 1px;
+  margin-bottom: 1px;
+
   @media (max-width: 850px) {
     opacity: 0;
     z-index: 5;
     transform: translateX(0%) scale(.8);
+    margin-top: 0;
+    margin-bottom: 0;
   }
 }
 
@@ -1038,6 +1053,11 @@ button {
 
   .pannel {
     background: rgba(#212121,.25);
+    box-shadow: none;
+
+    .lightmode & {
+      background: rgba(#fff, .5);
+    }
   }
 
   .colors {
