--- a/index.pug
+++ b/index.pug
@@ -53,11 +53,20 @@ html(lang="en-US")
       :class="appClasses")
       .bg-wrap
         .bg(:style="{'background-image': backgroundGradient}")
+
       .pannel(v-on:pointerdown="cancelSwipe")
-        span.pannel__title
-          h4.pannel__settingtitle Palette Name
-          h1.title
-            |{{paletteTitle}}
+        .pannel__head
+          span.pannel__title
+            h4.pannel__settingtitle Palette Name
+            h1.title
+              |{{paletteTitle}}
+
+            button.pannel__share(v-on:click="copy", aria-label="share this palette")
+              svg
+                use(xlink:href="#icon-share")
+        aside.pannel__share-menu
+          h2 Share
+
 
         label.pannel__setting
           h4.pannel__settingtitle Generation Method
@@ -305,6 +314,10 @@ html(lang="en-US")
           <symbol stroke-width="1.5" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="icon-cog">
             <path vector-effect="non-scaling-stroke" d="M12 15C13.6569 15 15 13.6569 15 12C15 10.3431 13.6569 9 12 9C10.3431 9 9 10.3431 9 12C9 13.6569 10.3431 15 12 15Z" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
             <path vector-effect="non-scaling-stroke" d="M19.6224 10.3954L18.5247 7.7448L20 6L18 4L16.2647 5.48295L13.5578 4.36974L12.9353 2H10.981L10.3491 4.40113L7.70441 5.51596L6 4L4 6L5.45337 7.78885L4.3725 10.4463L2 11V13L4.40111 13.6555L5.51575 16.2997L4 18L6 20L7.79116 18.5403L10.397 19.6123L11 22H13L13.6045 19.6132L16.2551 18.5155C16.6969 18.8313 18 20 18 20L20 18L18.5159 16.2494L19.6139 13.598L21.9999 12.9772L22 11L19.6224 10.3954Z" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
+          </symbol>
+          <symbol stroke-width="1.5" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="icon-share">
+            <path d="M20 13V19C20 20.1046 19.1046 21 18 21H6C4.89543 21 4 20.1046 4 19V13" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M12 15V3M12 3L8.5 6.5M12 3L15.5 6.5" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
           </symbol>
         </svg>
     script(src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17/vue.min.js")
