feat(animation): adds staggering animation on sidepannel

--- a/index.pug
+++ b/index.pug
@@ -54,7 +54,7 @@ html(lang="en-US")
       .bg-wrap
         .bg(:style="{'background-image': backgroundGradient}")
       .pannel(v-on:pointerdown="cancelSwipe")
-        span.pannel__title
+        .pannel__title
           h4.pannel__settingtitle Palette Name
           h1.title
             |{{paletteTitle}}
