--- a/main.scss
+++ b/main.scss
@@ -992,7 +992,7 @@ button {
 .pannel {
   //--color-bg: #fff;
   //--color-inverted: #212121;
-
+  perspective: 600px;
   box-shadow: inset 0 0 0 1px var(--color-inverted);
   overflow: auto;
 
@@ -1005,6 +1005,30 @@ button {
     transform: translateX(0%) scale(.8);
     margin-top: 0;
     margin-bottom: 0;
+  }
+}
+
+.pannel__setting {
+  opacity: 0;
+  transform: translateX(120%) scale(.5) rotateY(30deg);
+  transform-origin: 0% 50%;
+
+  @media (max-width: 850px) {
+    transform: translateY(120%) scaleY(.5) rotateX(30deg);
+  }
+}
+
+.wrap__showSettings .pannel__setting {
+  opacity: 1;
+  transform: translateX(0%) scale(1) rotateY(0deg);
+  transition: 250ms transform cubic-bezier(0.3, 0.7, 0, 1) 50ms,
+              175ms opacity linear 50ms;
+
+  @for $i from 1 through 30 {
+    &:nth-child(#{$i}) {
+      transition-delay: #{80 + $i * 25}ms,
+      #{80 + $i * 25}ms;
+    }
   }
 }
 
