--- a/index.pug
+++ b/index.pug
@@ -53,7 +53,7 @@ html(lang="en-US")
       :class="appClasses")
       .bg-wrap
         .bg(:style="{'background-image': backgroundGradient}")
-      .pannel(v-on:pointerdown="cancelSwipe")
+      .pannel(ref="pannel" v-on:pointerdown="cancelSwipe")
         .pannel__title
           h4.pannel__settingtitle Palette Name
           h1.title
